# WhatsApp-Demo

./: ClientInfo.cpp  Makefile  README.md  WhatsappClient.cpp  WhatsappServer.h
src/: CMakeLists.txt  ClientInfo.h  Group.cpp  Group.h  README  WhatsappClient.cpp  WhatsappClient.h  WhatsappServer.cpp  WhatsappServer.h  main.cpp
src/ClientSide/: WhatsappClient.cpp  WhatsappClient.h  whatsappClient
src/ServerSide/: ClientInfo.cpp  ClientInfo.h  Group.cpp  Group.h  WhatsappServer.cpp  WhatsappServer.h  whatsappServer
